--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,13 @@
   "game_name": "The Witness Archipelago Randomizer",
   "package_version": "0.0.2",
   "package_uid": "witness_ap_tracker_newsoupvi",
-  "author": "NewSoupVi"
+  "author": "NewSoupVi",
+  "variants": {
+    "standard": {
+      "display_name": "Map Tracker",
+      "flags": [
+        "ap"
+      ]
+    },
+  }
 }
