--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "The Witness Archipelago Randomizer Tracker",
+  "name": "Witness",
   "game_name": "The Witness Archipelago Randomizer",
-  "package_version": "0.0.4",
+  "package_version": "0.3.3.1",
   "package_uid": "witness_ap_tracker_newsoupvi",
   "author": "NewSoupVi",
   "variants": {
