--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "Witness",
   "game_name": "The Witness Archipelago Randomizer",
-  "package_version": "0.3.3.1",
+  "package_version": "0.3.3.2",
   "package_uid": "witness_ap_tracker_newsoupvi",
-  "author": "NewSoupVi",
+  "author": "NewSoupVi, Beaker",
   "variants": {
     "standard": {
       "display_name": "Map Tracker",
