--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Witness",
   "game_name": "The Witness Archipelago Randomizer",
-  "package_version": "0.3.3.3d",
+  "package_version": "0.3.3.4",
   "package_uid": "witness_ap_tracker_newsoupvi",
   "author": "NewSoupVi, Beaker",
   "variants": {
@@ -11,5 +11,11 @@
         "ap"
       ]
     },
+    "var_itemsonly": {
+     "display_name": "Items Only",
+     "flags": [
+       "ap"
+     ]
+    }
   }
 }
