--- a/layouts/settings.json
+++ b/layouts/settings.json
@@ -39,8 +39,15 @@
                     },                    
 					{
                         "type": "item",
-                        "margin": "0, 0, 1, 10",
+                        "margin": "0, 1",
                         "item": "Caves",                        
+                        "h_alignment": "center",
+                        "v_alignment": "strech"
+                    },                    
+					{
+                        "type": "item",
+                        "margin": "0, 0, 1, 10",
+                        "item": "Symbols",                        
                         "h_alignment": "center",
                         "v_alignment": "strech"
                     },                    
