Passable tracker with many errors!

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,18 @@
 {
   "name": "Witness",
   "game_name": "The Witness Archipelago Randomizer",
-  "package_version": "0.3.5",
+  "package_version": "0.3.6",
   "package_uid": "witness_ap_tracker_newsoupvi",
   "author": "NewSoupVi, Beaker",
   "variants": {
     "standard": {
       "display_name": "Map Tracker",
+      "flags": [
+        "ap"
+      ]
+    },
+    "var_expert": {
+      "display_name": "Expert Map Tracker",
       "flags": [
         "ap"
       ]
