Added all EPs and Obelisks

--- a/layouts/settings.json
+++ b/layouts/settings.json
@@ -43,6 +43,20 @@
                         "item": "Caves",                        
                         "h_alignment": "center",
                         "v_alignment": "strech"
+                    },                       
+					{
+                        "type": "item",
+                        "margin": "0, 1",
+                        "item": "eps",                        
+                        "h_alignment": "center",
+                        "v_alignment": "strech"
+                    },                       
+					{
+                        "type": "item",
+                        "margin": "0, 1",
+                        "item": "obelisks",                        
+                        "h_alignment": "center",
+                        "v_alignment": "strech"
                     },                    
 					{
                         "type": "item",
