Finished updating for 0.4.0

--- a/layouts/settings.json
+++ b/layouts/settings.json
@@ -33,7 +33,7 @@
 					{
                         "type": "item",
                         "margin": "0, 1",
-                        "item": "Expert",                        
+                        "item": "puzzleRandomization",                        
                         "h_alignment": "center",
                         "v_alignment": "strech"
                     },                    
@@ -43,14 +43,7 @@
                         "item": "Caves",                        
                         "h_alignment": "center",
                         "v_alignment": "strech"
-                    },                       
-					{
-                        "type": "item",
-                        "margin": "0, 1",
-                        "item": "epSetting",                        
-                        "h_alignment": "center",
-                        "v_alignment": "strech"
-                    },                       
+                    },                         
 					{
                         "type": "item",
                         "margin": "0, 1",
@@ -60,11 +53,25 @@
                     },                    
 					{
                         "type": "item",
-                        "margin": "0, 0, 1, 10",
+                        "margin": "0, 1",
                         "item": "shuffleLasers",                        
                         "h_alignment": "center",
                         "v_alignment": "strech"
-                    },        
+                    },                            
+					{
+                        "type": "item",
+                        "margin": "0, 1",
+                        "item": "epSetting",                        
+                        "h_alignment": "center",
+                        "v_alignment": "strech"
+                    },                     
+					{
+                        "type": "item",
+                        "margin": "0, 1",
+                        "item": "epDiff",                        
+                        "h_alignment": "center",
+                        "v_alignment": "strech"
+                    }, 
 					{
                         "type": "item",
                         "margin": "0, 1",
