--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Witness",
   "game_name": "The Witness Archipelago Randomizer",
-  "package_version": "0.4.0",
+  "package_version": "0.4.0a",
   "package_uid": "witness_ap_tracker_newsoupvi",
   "author": "NewSoupVi, Beaker",
   "variants": {
@@ -17,5 +17,6 @@
        "ap"
      ]
     }
-  }
+  },
+  "versions_url": "https://raw.githubusercontent.com/alwaysintreble/TheMessengerTrackPack/master/versions.json"
 }
