--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Witness",
   "game_name": "The Witness Archipelago Randomizer",
-  "package_version": "0.4.0b",
+  "package_version": "0.4.0c",
   "package_uid": "witness_ap_tracker_newsoupvi",
   "author": "NewSoupVi, Beaker",
   "variants": {
