Change tracker settings top bar
Changed from "Included locations" to "Randomization settings" as the settings list is a list of settings and not locations

--- a/layouts/settings.json
+++ b/layouts/settings.json
@@ -6,7 +6,7 @@
             {
                 "type": "group",
                 "dock": "top",
-                "header": "Included locations",
+                "header": "Randomization settings",
                 "header_background": "#3e4b57",                
 				"content": [
 				                    {
