--- a/layouts/settings.json
+++ b/layouts/settings.json
@@ -1,86 +1,93 @@
 {
-    "settings_popup": {
-        "type": "dock",
-        "margin": "-20",
+  "settings_popup": {
+    "type": "dock",
+    "margin": "-20",
+    "content": [
+      {
+        "type": "group",
+        "dock": "top",
+        "header": "Randomization settings",
+        "header_background": "#3e4b57",
         "content": [
           {
-            "type": "group",
-            "dock": "top",
-            "header": "Randomization settings",
-            "header_background": "#3e4b57",
-            "content": [
-              {
-                "type": "item",
-                "margin": "0, 1",
-                "item": "Unrandomized",
-                "h_alignment": "center",
-                "v_alignment": "stretch"
-              },
-              {
-                "type": "item",
-                "margin": "0, 1",
-                "item": "Vaults",
-                "h_alignment": "center",
-                "v_alignment": "stretch"
-              },
-              {
-                "type": "item",
-                "margin": "0, 1",
-                "item": "Discarded",
-                "h_alignment": "center",
-                "v_alignment": "stretch"
-              },
-              {
-                "type": "item",
-                "margin": "0, 1",
-                "item": "puzzleRandomization",
-                "h_alignment": "center",
-                "v_alignment": "stretch"
-              },
-              {
-                "type": "item",
-                "margin": "0, 1",
-                "item": "cavesSetting",
-                "h_alignment": "center",
-                "v_alignment": "stretch"
-              },
-              {
-                "type": "item",
-                "margin": "0, 1",
-                "item": "Symbols",
-                "h_alignment": "center",
-                "v_alignment": "stretch"
-              },
-              {
-                "type": "item",
-                "margin": "0, 1",
-                "item": "shuffleLasers",
-                "h_alignment": "center",
-                "v_alignment": "stretch"
-              },
-              {
-                "type": "item",
-                "margin": "0, 1",
-                "item": "epSetting",
-                "h_alignment": "center",
-                "v_alignment": "stretch"
-              },
-              {
-                "type": "item",
-                "margin": "0, 1",
-                "item": "epDiff",
-                "h_alignment": "center",
-                "v_alignment": "stretch"
-              },
-              {
-                "type": "item",
-                "margin": "0, 1",
-                "item": "doorsSetting",
-                "h_alignment": "center",
-                "v_alignment": "stretch"
-              }
-            ]
+            "type": "item",
+            "margin": "0, 1",
+            "item": "Unrandomized",
+            "h_alignment": "center",
+            "v_alignment": "stretch"
+          },
+          {
+            "type": "item",
+            "margin": "0, 1",
+            "item": "Vaults",
+            "h_alignment": "center",
+            "v_alignment": "stretch"
+          },
+          {
+            "type": "item",
+            "margin": "0, 1",
+            "item": "Discarded",
+            "h_alignment": "center",
+            "v_alignment": "stretch"
+          },
+          {
+            "type": "item",
+            "margin": "0, 1",
+            "item": "puzzleRandomization",
+            "h_alignment": "center",
+            "v_alignment": "stretch"
+          },
+          {
+            "type": "item",
+            "margin": "0, 1",
+            "item": "cavesSetting",
+            "h_alignment": "center",
+            "v_alignment": "stretch"
+          },
+          {
+            "type": "item",
+            "margin": "0, 1",
+            "item": "autoElevators",
+            "h_alignment": "center",
+            "v_alignment": "stretch"
+          },
+          {
+            "type": "item",
+            "margin": "0, 1",
+            "item": "Symbols",
+            "h_alignment": "center",
+            "v_alignment": "stretch"
+          },
+          {
+            "type": "item",
+            "margin": "0, 1",
+            "item": "shuffleLasers",
+            "h_alignment": "center",
+            "v_alignment": "stretch"
+          },
+          {
+            "type": "item",
+            "margin": "0, 1",
+            "item": "epSetting",
+            "h_alignment": "center",
+            "v_alignment": "stretch"
+          },
+          {
+            "type": "item",
+            "margin": "0, 1",
+            "item": "epDiff",
+            "h_alignment": "center",
+            "v_alignment": "stretch"
+          },
+          {
+            "type": "item",
+            "margin": "0, 1",
+            "item": "doorsSetting",
+            "h_alignment": "center",
+            "v_alignment": "stretch"
           }
         ]
-    }
+      }
+    ]
+  }
 }
