Added door Grouping

--- a/layouts/settings.json
+++ b/layouts/settings.json
@@ -85,6 +85,13 @@
             "item": "doorsSetting",
             "h_alignment": "center",
             "v_alignment": "stretch"
+          },
+          {
+            "type": "item",
+            "margin": "0, 1",
+            "item": "doorsGrouping",
+            "h_alignment": "center",
+            "v_alignment": "stretch"
           }
         ]
       }
