--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "game_name": "The Witness Archipelago Randomizer",
   "package_version": "0.4.1.1c",
   "package_uid": "witness_ap_tracker_newsoupvi",
-  "author": "NewSoupVi, Beaker",
+  "author": "NewSoupVi, Beaker, Exempt-Medic",
   "variants": {
     "standard": {
       "display_name": "Map Tracker",
