--- a/layouts/settings.json
+++ b/layouts/settings.json
@@ -5,7 +5,7 @@
 		"content": [
 			{
 				"type": "group",
-				"dock": "top",
+				"dock": "left",
 				"header": "Randomization settings",
 				"header_background": "#3e4b57",
 				"content": [
@@ -83,6 +83,21 @@
 						"type": "item",
 						"margin": "0, 1",
 						"item": "doorsSetting",
+						"h_alignment": "center",
+						"v_alignment": "stretch"
+					}
+				]
+			},
+			{
+				"type": "group",
+				"dock": "right",
+				"header": "Tracker settings",
+				"header_background": "#3e4b57",
+				"content": [
+					{
+						"type": "item",
+						"margin": "0, 1",
+						"item": "showSnipes",
 						"h_alignment": "center",
 						"v_alignment": "stretch"
 					}
