Itemgrid is so nice

--- a/layouts/settings.json
+++ b/layouts/settings.json
@@ -1,105 +1,28 @@
 {
 	"settings_popup": {
-		"type": "dock",
-		"margin": "-20",
+		"type": "array",
+		"orientation": "horizontal",
+		"margin": "0,0",
 		"content": [
 			{
-				"type": "group",
-				"dock": "left",
-				"header": "Randomization settings",
-				"header_background": "#3e4b57",
+				"type": "array",
+				"orientation": "horizontal",
+				"margin": "0,25",
 				"content": [
 					{
-						"type": "item",
-						"margin": "0, 1",
-						"item": "Unrandomized",
-						"h_alignment": "center",
-						"v_alignment": "stretch"
-					},
-					{
-						"type": "item",
-						"margin": "0, 1",
-						"item": "Vaults",
-						"h_alignment": "center",
-						"v_alignment": "stretch"
-					},
-					{
-						"type": "item",
-						"margin": "0, 1",
-						"item": "Discarded",
-						"h_alignment": "center",
-						"v_alignment": "stretch"
-					},
-					{
-						"type": "item",
-						"margin": "0, 1",
-						"item": "puzzleRandomization",
-						"h_alignment": "center",
-						"v_alignment": "stretch"
-					},
-					{
-						"type": "item",
-						"margin": "0, 1",
-						"item": "cavesSetting",
-						"h_alignment": "center",
-						"v_alignment": "stretch"
-					},
-					{
-						"type": "item",
-						"margin": "0, 1",
-						"item": "autoElevators",
-						"h_alignment": "center",
-						"v_alignment": "stretch"
-					},
-					{
-						"type": "item",
-						"margin": "0, 1",
-						"item": "Symbols",
-						"h_alignment": "center",
-						"v_alignment": "stretch"
-					},
-					{
-						"type": "item",
-						"margin": "0, 1",
-						"item": "shuffleLasers",
-						"h_alignment": "center",
-						"v_alignment": "stretch"
-					},
-					{
-						"type": "item",
-						"margin": "0, 1",
-						"item": "epSetting",
-						"h_alignment": "center",
-						"v_alignment": "stretch"
-					},
-					{
-						"type": "item",
-						"margin": "0, 1",
-						"item": "epDiff",
-						"h_alignment": "center",
-						"v_alignment": "stretch"
-					},
-					{
-						"type": "item",
-						"margin": "0, 1",
-						"item": "doorsSetting",
-						"h_alignment": "center",
-						"v_alignment": "stretch"
-					}
-				]
-			},
-			{
-				"type": "group",
-				"dock": "right",
-				"header": "Tracker settings",
-				"header_background": "#3e4b57",
-				"content": [
-					{
-						"type": "item",
-						"margin": "0, 1",
-						"item": "showSnipes",
-						"h_alignment": "center",
-						"v_alignment": "stretch"
+						"type": "itemgrid",
+						"item_margin": "2,-25",
+						"h_alignment": "left",
+						"item_size": "400,95",
+						"rows": [
+							[ "Unrandomized", "Vaults", "Discarded" ],
+							[ "puzzleRandomization", "Symbols", "shuffleLasers" ],
+							[ "cavesSetting", "doorsSetting", "autoElevators" ],
+							[],
+							[ "epSetting", "epDiff", "obeliskKeys" ],
+							[],
+							[ "", "showSnipes" ]
+						]
 					}
 				]
 			}
