Itemgrid go brrrrrrrrrr

--- a/layouts/settings.json
+++ b/layouts/settings.json
@@ -19,9 +19,8 @@
 							[ "puzzleRandomization", "Symbols", "shuffleLasers" ],
 							[ "cavesSetting", "doorsSetting", "autoElevators" ],
 							[],
-							[ "epSetting", "epDiff", "obeliskKeys" ],
-							[],
-							[ "", "showSnipes" ]
+							[ "epSetting", "", "epDiff" ],
+							[ "", "showSnipes", "" ]
 						]
 					}
 				]
